--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,13 +2,16 @@ spring.application.name=incident
 
 # H2 Database Configuration
 spring.datasource.url=jdbc:h2:mem:incidentdb
-spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+# Enable H2 Console
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 
-# JPA Configuration
+# JPA/Hibernate properties
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
@@ -17,5 +20,5 @@ spring.jpa.properties.hibernate.format_sql=true
 springdoc.api-docs.path=/api-docs
 springdoc.swagger-ui.path=/swagger-ui.html
 
-# Server Configuration
+# Server configuration
 server.port=8080
